--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Sample-JS-Web-Basic",
   "version": "1.0.0",
-  "description": "SendBird Web Basic Sample",
+  "description": "Sendbird Web Basic Sample",
   "main": "index.js",
   "scripts": {
     "dev": "./node_modules/.bin/webpack --mode=development",
