--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Sample-JS-Web-Basic",
-  "version": "1.0.0",
-  "description": "Sendbird Web Basic Sample",
+  "name": "chat-client",
+  "version": "1.0.1",
+  "description": "Based on Sendbird Web Basic Sample",
   "main": "index.js",
   "scripts": {
     "dev": "./node_modules/.bin/webpack --mode=development",
@@ -11,8 +11,8 @@
     "start": "npm run build && node server.js",
     "deploy": "node ./deploy/deploy.js"
   },
-  "author": "SendBird",
-  "license": "ISC",
+  "author": "Chris Wang",
+  "license": "MIT",
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.3",
@@ -24,7 +24,7 @@
     "eslint-loader": "^2.0.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^6.0.0",
     "prettier": "^1.15.3",
     "sass-loader": "^7.1.0",
     "ssh2": "^0.8.5",
