--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-loader": "^2.0.0",
     "express": "^4.16.3",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "node-sass": "^6.0.0",
+    "node-sass": "^4.11.0",
     "prettier": "^1.15.3",
     "sass-loader": "^7.1.0",
     "ssh2": "^0.8.5",
@@ -36,5 +36,8 @@
   "dependencies": {
     "moment": "^2.22.1",
     "sendbird": "^3.0.111"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
