cleaned up npm scripts; removed `npm build` from the start script

--- a/package.json
+++ b/package.json
@@ -5,11 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "./node_modules/.bin/webpack --mode=development",
-    "dev:w": "./node_modules/.bin/webpack --mode=none -w",
     "build": "./node_modules/.bin/webpack --mode=production",
-    "start:dev": "./node_modules/.bin/webpack-dev-server",
-    "start": "npm run build && node server.js",
-    "deploy": "node ./deploy/deploy.js"
+    "start": "node server.js"
   },
   "author": "Chris Wang",
   "license": "MIT",
